<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="koins.avalonapp.Reading">

    <TextView
        android:text="@string/listen"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <Button
        android:id="@+id/PlayAgain"
        android:layout_width="wrap_content"
        android:paddingLeft="10px"
        android:paddingRight="10px"
        android:layout_height="wrap_content"
        android:text="@string/same_setup"
        android:background="@drawable/navigation"
        android:layout_above="@+id/ChangeSetup"
        android:layout_marginBottom="70dp"
        android:layout_alignLeft="@+id/home"
        android:layout_alignStart="@+id/home" />

    <Button
        android:id="@+id/ChangeSetup"
        android:layout_width="wrap_content"
        android:paddingLeft="10px"
        android:paddingRight="10px"
        android:layout_height="wrap_content"
        android:text="@string/change_setup"
        android:background="@drawable/navigation"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <Button
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:paddingLeft="10px"
        android:paddingRight="10px"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:background="@drawable/navigation"
        android:layout_below="@+id/ChangeSetup"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
