<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="koins.avalonapp.Game_Setup">

    <TextView
        android:text="@string/setup"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:id="@+id/editText" />

    <ToggleButton
        android:id="@+id/togglemerlin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textOn="@string/in_game"
        android:textOff="@string/not_in_game"
        android:background="@drawable/button_color"
        android:layout_below="@+id/editText"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@+id/mordredLabel"
        android:layout_toEndOf="@+id/mordredLabel" />

    <ToggleButton
        android:id="@+id/togglepercival"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textOn="@string/in_game"
        android:textOff="@string/not_in_game"
        android:background="@drawable/button_color"
        android:layout_below="@+id/merlinPic"
        android:layout_marginTop="50dp"
        android:layout_alignLeft="@+id/togglelancelot1"
        android:layout_alignStart="@+id/togglelancelot1" />

    <ToggleButton
        android:id="@+id/togglemordred"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textOn="@string/in_game"
        android:textOff="@string/not_in_game"
        android:background="@drawable/button_color"
        android:layout_below="@+id/percivalPic"
        android:layout_marginTop="50dp"
        android:layout_toRightOf="@+id/mordredLabel"
        android:layout_toEndOf="@+id/mordredLabel" />

    <ToggleButton
        android:id="@+id/togglemorgana"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textOn="@string/in_game"
        android:textOff="@string/not_in_game"
        android:background="@drawable/button_color"
        android:layout_below="@+id/mordredPic"
        android:layout_marginTop="50dp"
        android:layout_toRightOf="@+id/morganaLabel"
        android:layout_toEndOf="@+id/morganaLabel" />

    <ToggleButton
        android:id="@+id/toggleoberon"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textOn="@string/in_game"
        android:textOff="@string/not_in_game"
        android:background="@drawable/button_color"
        android:layout_below="@+id/morganaPic"
        android:layout_marginTop="50dp"
        android:layout_alignLeft="@+id/togglemorgana"
        android:layout_alignStart="@+id/togglemorgana" />

    <ToggleButton
        android:id="@+id/togglelancelot1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textOn="@string/in_game"
        android:textOff="@string/not_in_game"
        android:background="@drawable/button_color"
        android:layout_below="@+id/oberonPic"
        android:layout_marginTop="50dp"
        android:layout_alignLeft="@+id/toggleoberon"
        android:layout_alignStart="@+id/toggleoberon" />

    <ToggleButton
        android:id="@+id/togglelancelot2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textOn="@string/in_game"
        android:textOff="@string/not_in_game"
        android:background="@drawable/button_color"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/togglelancelot1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/voiceoption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voice_choice"
        android:background="@drawable/navigation"
        android:layout_below="@+id/minusButton"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/done_reading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done_reading"
        android:background="@drawable/navigation"
        android:layout_below="@+id/voiceoption"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/minus"
        android:id="@+id/minusButton"
        android:layout_below="@+id/lancelot2Pic"
        android:layout_marginTop="50dp"
        android:layout_alignLeft="@+id/togglelancelot2"
        android:layout_alignStart="@+id/togglelancelot2" />

    <TextView
        android:textSize="20sp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:textAlignment="center"
        android:id="@+id/pauseValue"
        android:layout_alignTop="@+id/minusButton"
        android:layout_toRightOf="@+id/minusButton"
        android:layout_toEndOf="@+id/minusButton" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/pauseValue"
        android:text="@string/plus"
        android:id="@+id/plusButton"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:layout_alignEnd="@+id/toggleoberon"
        android:layout_alignRight="@+id/toggleoberon"/>

    <TextView
        android:text="@string/pauseValue"
        android:textSize="15sp"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:id="@+id/pause"
        android:layout_alignTop="@+id/minusButton"
        android:layout_toRightOf="@+id/merlinPic"
        android:layout_toLeftOf="@+id/minusButton"
        android:layout_toStartOf="@+id/minusButton"/>

    <ImageView
        android:id="@+id/merlinPic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/merlin"
        android:layout_alignTop="@+id/togglemerlin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/percivalPic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/percival"
        android:layout_alignTop="@+id/togglepercival"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/mordredPic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/mordred"
        android:layout_alignTop="@+id/togglemordred"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/morganaPic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/morgana"
        android:layout_alignTop="@+id/togglemorgana"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/oberonPic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/oberon"
        android:layout_alignTop="@+id/toggleoberon"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/lancelot1Pic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/badlancelot"
        android:layout_alignBottom="@+id/togglelancelot1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/lancelot2Pic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/badlancelot"
        android:layout_alignTop="@+id/togglelancelot2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/merlinLabel"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:id="@+id/merlinLabel"
        android:layout_alignTop="@+id/togglemerlin"
        android:layout_toRightOf="@+id/merlinPic"
        android:layout_toLeftOf="@+id/minusButton"
        android:layout_toStartOf="@+id/minusButton" />

    <TextView
        android:text="@string/percivalLabel"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:id="@+id/percivalLabel"
        android:layout_alignTop="@+id/togglepercival"
        android:layout_toRightOf="@+id/merlinPic"
        android:layout_toLeftOf="@+id/minusButton"
        android:layout_toStartOf="@+id/minusButton" />

    <TextView
        android:text="@string/mordredLabel"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:id="@+id/mordredLabel"
        android:layout_alignTop="@+id/togglemordred"
        android:layout_toRightOf="@+id/merlinPic"
        android:layout_toLeftOf="@+id/minusButton"
        android:layout_toStartOf="@+id/minusButton" />

    <TextView
        android:text="@string/morganaLabel"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:id="@+id/morganaLabel"
        android:layout_alignTop="@+id/togglemorgana"
        android:layout_toRightOf="@+id/merlinPic"
        android:layout_toLeftOf="@+id/minusButton"
        android:layout_toStartOf="@+id/minusButton" />

    <TextView
        android:text="@string/oberonLabel"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:id="@+id/oberonLabel"
        android:layout_alignTop="@+id/toggleoberon"
        android:layout_toRightOf="@+id/merlinPic"
        android:layout_toLeftOf="@+id/minusButton"
        android:layout_toStartOf="@+id/minusButton" />

    <TextView
        android:text="@string/lancelot1Label"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:id="@+id/lancelot1Label"
        android:layout_alignTop="@+id/togglelancelot1"
        android:layout_toRightOf="@+id/merlinPic"
        android:layout_toLeftOf="@+id/minusButton"
        android:layout_toStartOf="@+id/minusButton" />

    <TextView
        android:text="@string/lancelot2Label"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:id="@+id/lancelot2Label"
        android:layout_alignTop="@+id/togglelancelot2"
        android:layout_toRightOf="@+id/merlinPic"
        android:layout_toLeftOf="@+id/minusButton"
        android:layout_toStartOf="@+id/minusButton" />

</RelativeLayout>
</ScrollView>